# ticket-marketplace

./: .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REGISTRATION_ENDPOINT.md  build.sh  docker-compose.yml  reset-db.sh
Docs/: API_ENDPOINTS.md  API_REFERENCE.md  DOCKER_COMMANDS.md  FRONTEND_API.md  FRONTEND_PLAN.md  GAMES_CLI_COMMANDS.md  LOGIN_ENDPOINT.md  REGISTRATION_ENDPOINT.md  TICKET_LISTING_FLOW.md  TICKET_STATE_TRANSITIONS.md  VERIFICATION_BOT_ARCHITECTURE.md  old.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_enable_uuid_extension.sql  002_create_users_table.sql  003_create_games_table.sql  003_create_tickets_table.sql  004_create_tickets_table.sql  004_create_transactions_table.sql  005_create_payment_intents_table.sql  005_create_ticket_transfers_table.sql
backend/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  routes.rs  utils.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  games.rs  tickets.rs  webhooks.rs
backend/src/models/: game.rs  payment_intent.rs  ticket.rs  user.rs
backend/src/utils/: auth.rs  cleanup.rs  email.rs  jwt.rs  password.rs  rate_limit.rs  stripe.rs
frontend/: .dockerignore  Dockerfile  README.md  index.html  package.json  tailwind.config.cjs  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/games/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/my-listings/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/sell/: page.tsx
frontend/src/app/tickets/: page.tsx
frontend/src/components/: GameCard.tsx
frontend/src/components/forms/: LoginForm.tsx  RegisterForm.tsx  SellTicketForm.tsx
frontend/src/components/layout/: AuthGuard.tsx  Footer.tsx  Navbar.tsx
frontend/src/components/tickets/: TicketCard.tsx  TicketList.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx
frontend/src/lib/: api.ts  auth.tsx  utils.ts
frontend/src/pages/: Index.tsx  NotFound.tsx  Placeholder.tsx
frontend/src/styles/: tailwind.css
frontend/src/types/: index.ts
