[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fa Yan <fahyen63@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Data types
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
time = "0.3.44"

# Additional utilities
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"

# Stripe integration
stripe = { package = "async-stripe", version = "0.30", features = ["webhook-events", "runtime-tokio-hyper"] }

