[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Authentication & Security
jsonwebtoken.workspace = true
bcrypt.workspace = true

# Data types
uuid.workspace = true
chrono.workspace = true

# Additional utilities
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true

